--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "dependencies": {
     "color": "^3.0.0",
     "gatsby": "1.9.224",
+    "gatsby-cli": "1.1.45",
     "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.36",
     "gatsby-plugin-algolia": "^0.0.3",
