--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "develop-host": "gatsby develop --host 192.168.0.112",
-    "build": "gatsby build",
+    "build": "npm install && gatsby build",
     "serve": "gatsby serve",
     "format-output": "prettier src/**/*.{js,jsx}",
     "format": "prettier --write src/**/*.{js,jsx}",
